# joss-paper-template

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .prettierrc.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  cliff.toml  paper.bib  paper.md  pyproject.toml  setup_repo.sh
.github/workflows/: draft-pdf.yml  draft-release.yml  pre-commit.yml  release.yml  scheduled-release.yml  semantic-pull-request.yml
src/joss_paper_template/: __init__.py
