[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "joss-paper-template"
description = "Dev tooling for the JOSS paper template (pre-commit)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.6.0",
]
release = ["git-cliff>=2.12.0"]

[tool.uv-dynamic-versioning]
vcs = "git"      # default
style = "semver" # or pep440, semver, etc.

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/joss_paper_template"]
